# iterator

./: .drone.star  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  build.jam
.drone/: drone.sh
.github/workflows/: ci.yml
doc/: facade-and-adaptor.html  facade-and-adaptor.rst  index.html  index.rst  iterator-categories.html  iterator_facade.html  iterator_facade_tutorial.rst  iterator_traits.html  new-iter-concepts.html  new-iter-concepts.rst  pointee.html  shared_container_iterator.html
doc/quickbook/: adaptor.qbk  algorithms.qbk  concepts.qbk  counting_iterator.qbk  facade.qbk  facade_tutorial.qbk  filter_iterator.qbk  indirect_iterator.qbk  iterator.qbk  permutation_iterator.qbk  reverse_iterator.qbk  shared_container_iterator.qbk  traits.qbk  transform_iterator.qbk  utilities.qbk  zip_iterator.qbk
example/: filter_iterator_example.cpp  indirect_iterator_example.cpp  node_iterator2.hpp  node_iterator3.hpp  reverse_iterator.cpp  shared_iterator_example1.cpp  shared_iterator_example2.cpp  shared_iterator_example3.cpp  transform_iterator_example.cpp
include/boost/: counting_iterator.hpp  function_output_iterator.hpp  generator_iterator.hpp  indirect_reference.hpp  iterator_adaptors.hpp  pointee.hpp  shared_container_iterator.hpp
include/boost/iterator/: advance.hpp  counting_iterator.hpp  filter_iterator.hpp  function_input_iterator.hpp  function_output_iterator.hpp  indirect_iterator.hpp  interoperable.hpp  is_iterator.hpp  is_lvalue_iterator.hpp  is_readable_iterator.hpp  iterator_adaptor.hpp  iterator_adaptors.hpp  iterator_archetypes.hpp  iterator_categories.hpp  iterator_concepts.hpp  iterator_facade.hpp  iterator_traits.hpp  min_category.hpp  minimum_category.hpp  new_iterator_tests.hpp  permutation_iterator.hpp  reverse_iterator.hpp  transform_iterator.hpp  zip_iterator.hpp
include/boost/iterator/detail/: categories.hpp  config_def.hpp  config_undef.hpp  enable_if.hpp  facade_iterator_category.hpp  minimum_category.hpp
include/boost/iterator/detail/type_traits/: conjunction.hpp
include/boost/pending/: iterator_tests.hpp
test/: CMakeLists.txt  Jamfile  Jamfile.v2  advance_test.cpp  concept_tests.cpp  counting_iterator_test.cpp  distance_test.cpp  filter_iterator_test.cpp  function_input_iterator_test.cpp  function_output_iterator_test.cpp  indirect_iter_member_types.cpp  indirect_iterator_test.cpp  interoperable_fail.cpp  is_convertible_fail.cpp  is_iterator.cpp  is_lvalue_iterator.cpp  is_readable_iterator.cpp  iterator_adaptor_cc.cpp  iterator_adaptor_test.cpp  iterator_archetype_cc.cpp  iterator_facade.cpp  iterator_traits_test.cpp  next_prior_test.cpp  permutation_iterator_test.cpp  range_distance_compat_test.cpp  reverse_iterator_test.cpp  static_assert_same.hpp  transform_iterator_test.cpp  unit_tests.cpp  zip_iterator_test.cpp  zip_iterator_test_std_pair.cpp
test/detail/: zip_iterator_test.ipp
test/test_cmake/: main.cpp
